# RDK

./: README.md  过程中的版本记录-方便整理
Chili/: CMakeLists.txt  basic.cpp  main.cpp  mipi.py  model_mipi.py  usb_cam.py
history/: app.py  app4.py  app5_raw.py  app_s.py  index.html
